# openhd-glide

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  manual-wsl.md
.github/workflows/: build_glide_platform_packages.yml
docs/: architecture.md
examples/: autorun-local-video-to-glide.sh  buildrun-orangepi-zero3w-bookworm.sh  kms-example-common.sh  run-glide-view-decode-only.sh  run-kms-stack.sh  run-kms-video-cedar-flow.sh  run-kms-video-cedar-video-only.sh  run-kms-video-gstreamer-flow-30fps.sh  run-kms-video-gstreamer-flow-ui.sh  run-kms-video-gstreamer-flow.sh  run-kms-video-gstreamer-video-only.sh  run-kms-video-rkmpp-flow-ui.sh  run-kms-video-rkmpp-video-only.sh  run-kms-video-rpi-video-only.sh  run-wsl-flow-preview.sh  run-wsl-minimap-preview.sh  run-wsl-ui-preview.sh  run-wsl-video-decode.sh  stream-blurbusters-1080p120-to-glide-view.sh  stream-h264-file-to-glide-view.bat  stream-h264-file-to-glide-view.sh  stream-mjpeg-videotestsrc-to-glide.sh  stream-videotestsrc-to-glide-view.bat  stream-videotestsrc-to-glide-view.sh
packaging/assets/: x20_header.h264
packaging/debian/: conffiles  postinst  postrm  prerm
packaging/systemd/: openhd-glide-service-run  openhd-glide-stream.default  openhd-glide-stream.service.in  openhd-glide.default  openhd-glide.service  openhd-glide.service.in
scripts/: build-auto.sh  compile-install.sh  generate_fake_minimap_tiles.py
src/common/: ipc.cpp  ipc.hpp  logging.cpp  logging.hpp  mavlink_state.cpp  mavlink_state.hpp  mavlink_udp_bridge.cpp  mavlink_udp_bridge.hpp  openhd_protocol.hpp  preview_control.cpp  preview_control.hpp
src/dev/: kms_atomic_compositor.cpp  kms_atomic_compositor.hpp  kms_dmabuf_video_plane.cpp  kms_dmabuf_video_plane.hpp  kms_gles_window.cpp  kms_gles_window.hpp  sdl_gles_window.cpp  sdl_gles_window.hpp
src/glide_flow/: altitude_widget.cpp  altitude_widget.hpp  bitmap_font.cpp  bitmap_font.hpp  fps_counter.cpp  fps_counter.hpp  fps_overlay.cpp  fps_overlay.hpp  gles_text_renderer.cpp  gles_text_renderer.hpp  link_overview.cpp  link_overview.hpp  main.cpp  naval_osd.cpp  naval_osd.hpp  osd_theme.hpp  performance_horizon.cpp  performance_horizon.hpp  rocket_osd.cpp  rocket_osd.hpp  rover_osd.cpp  rover_osd.hpp  simulated_attitude.cpp  simulated_attitude.hpp  speed_widget.cpp  speed_widget.hpp  vector_font.cpp  vector_font.hpp
src/glide_ui/: lv_conf.h  main.cpp  minimap_demo.cpp  minimap_widget.cpp  minimap_widget.hpp
src/glide_view/: main.cpp
src/openhd_glide/: main.cpp
src/platform/: core_assignment.cpp  core_assignment.hpp  cpu_topology.cpp  cpu_topology.hpp  drm_probe.cpp  drm_probe.hpp  process_probe.cpp  process_probe.hpp
src/tools/: glide_send.cpp
src/video/: cedar_rtp_decoder.cpp  cedar_rtp_decoder.hpp  rockchip_mpp_rtp_decoder.cpp  rockchip_mpp_rtp_decoder.hpp
